added entrypoint.sh which waits for mysql before starting django

--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,10 @@
 DEBUG=1
 SECRET_KEY=&q@08rw8#7z#z#c%1a6utbt6@)37l_y*zxqw^^r_7(x&x)_e)g
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=hello_django_dev
+SQL_ENGINE=django.db.backends.mysql
+SQL_DATABASE=hello_django_db
 SQL_USER=hello_django
-SQL_PASSWORD=hello_django
+SQL_PASSWORD=1
 SQL_HOST=db
-SQL_PORT=5432
-DATABASE=postgres
+SQL_PORT=3306
+DATABASE=mysql
