--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 Django==2.2.6
-psycopg2-binary==2.8.3
+djangorestframework==3.11.0
+pytz==2020.1
+sqlparse==0.3.1
+django-mysql==2.2.0
+mysqlclient==1.4.6
