--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 DEBUG=1
-SECRET_KEY=&q@08rw8#7z#z#c%1a6utbt6@)37l_y*zxqw^^r_7(x&x)_e)g
+SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.mysql
 SQL_DATABASE=hello_django_db
